--- a/index.html
+++ b/index.html
@@ -355,14 +355,14 @@
   <span class=" uppercase white L-spacing wrd-spacing"><b class="asr">fatima asrafy</b><span class="word col">-coo,amerimar enterprises,inc.</span></span>
    </div>
   <ul class=" space container">
-  <li class="mix-pic"><img src="images/testimonial-1.jpg"class="wid"></li>
-  <li class="mix-pic"><img src="images/testimonial-2.jpg"class="wid "></li>
-  <li class="mix-pic"><img src="images/testimonial-3.jpg"class="wid "></li>
-  <li class="mix-pic"><img src="images/testimonial-4.jpg"class="wid "></li>
-  <li class="mix-pic"><img src="images/testimonial-5.jpg"class="wid "></li>
-  <li class="mix-pic"><img src="images/testimonial-6.jpg"class="wid"></li>
-  <li class="mix-pic"><img src="images/testimonial-7.jpg"class="wid "></li>
-  <li class="mix-pic"><img src="images/testimonial-8.jpg"class="wid "></li>
+  <li class="mix-pic"><img src="../images/testimonial-1.jpg"class="wid"></li>
+  <li class="mix-pic"><img src="../images/testimonial-2.jpg"class="wid "></li>
+  <li class="mix-pic"><img src="../images/testimonial-3.jpg"class="wid "></li>
+  <li class="mix-pic"><img src="../images/testimonial-4.jpg"class="wid "></li>
+  <li class="mix-pic"><img src="../images/testimonial-5.jpg"class="wid "></li>
+  <li class="mix-pic"><img src="../images/testimonial-6.jpg"class="wid"></li>
+  <li class="mix-pic"><img src="../images/testimonial-7.jpg"class="wid "></li>
+  <li class="mix-pic"><img src="../images/testimonial-8.jpg"class="wid "></li>
   </ul>
  </div>
  </div>
