--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
    <div class="service  ">
       <div class="section-6 ">
   <p class="white highly website">Phenomenal Customer Service! I'm just starting out with the team helped me so much with integrating this into my website.<span class="under">Highly recommend.</span></p>
-  <span class=" uppercase white L-spacing wrd-spacing"><b class="asr">fatima asrafy</b><span class="word col">-coo,amerimar enterprises,inc.</span></span>
+  <span class=" uppercase white L-spacing wrd-spacing"><b class="asr fatima-white">fatima asrafy</b><span class="word col">-coo,amerimar enterprises,inc.</span></span>
    </div>
   <ul class=" space container">
   <li class="mix-pic"><img src="images/testimonial-1.jpg"class="wid"></li>
