--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body class="body">
+<label for="file">file downloading</label>
+<progress id="file" value="50" max="100"></progress>
+<details>
+  <summary>RadheKrishan</summary>
+  <p>I love my shre krishan</p>
+</details>
+<label for="fruits">Choose a fruit:</label>
+<input list="fruit-list" id="fruits" name="fruit">
+<datalist id="fruit-list">
+  <option value="Apple">
+  <option value="Banana">
+  <option value="Orange">
+  <option value="Mango">
+</datalist>
 <div class="wrapper">
  <header class="header-width" id="header">
  <div class="header-left">                               
@@ -32,7 +46,7 @@
     <ul class="header-navigate nav">
 	   <li class="navigate relative"><a href="index.html" class="home-navigate home-padding">home</a>
 		 <ul class="home-list black">
-	   <li class="services"><a href="#">main demo</a></li>
+	   <li class="services"><a href="index.html">main demo</a></li>
 	   <li class="services"><a href="index.html" class="demo-color">main demo dark</a></li>
 	   <li class="services"><a href="#">creative agency</a></li>
 	   <li class="services"><a href="#">creative agency landing</a></li>
@@ -110,21 +124,95 @@
 		     <li class="services"><a href="#">link post</a></li>
 			 </ul>	   
 		   </li>
-		   <li class="navigate "><a href="contact.html"class="red home-padding">contact</a></li>
+		   <li class="navigate"><a href="contact.html"class="red home-padding">contact</a></li>
 		   </ul>
-		 <a href="#"class="shopp-icon"><i class="fa fa-shopping-cart" aria-hidden="true"><span class="script">0</span></i></a>
+		 <a href="#"class="shopp-icon res-shop"><i class="fa fa-shopping-cart" aria-hidden="true"><span class="script">0</span></i></a>
 			 <a href="#"class="header-button">let's talk</a>
-      
+      </div>
 <!-- start responsive navigation javascript code -->
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#" class="sidebar">Home</a>
-    <a href="#" >About</a>
-    <a href="#" >Pages</a>
-    <a href="#" >Elements</a>
-    <a href="#">Shop</a>
-    <a href="#">Blog</a>
-    <a href="#">Contact</a>
+    <li class="navigate relative"><a href="index.html" class="sidebar home-navigate home-padding">Home</a>
+      <ul class="home-list black">
+        <li class="services "><a href="index.html">main demo</a></li>
+      <li class="services"><a href="index.html" class="demo-color">main demo dark</a></li>
+      <li class="services"><a href="#">creative agency</a></li>
+      <li class="services"><a href="#">creative agency landing</a></li>
+      <li class="services"><a href="#">personal portfolio</a></li>
+      <li class="services"><a href="#">personal portfolio 02</a></li>
+      <li class="services"><a href="#">personal portfolio landing</a></li>
+      <li class="services"><a href="#">designer portfolio</a></li>
+      <li class="services"><a href="#">creative portfolio</a></li>
+      <li class="services"><a href="#">business</a><li>
+      <li class="services"><a href="#">digital agency</a></li>
+      <li class="services"><a href="#">minimal portfolio</a></li>
+      <li class="services"><a href="#">studio agency</a></li>
+      <li class="services"><a href="#">home particles</a></li>
+      <li class="services"><a href="#">corporate business</a></li>
+      <li class="services"><a href="#">parallax home</a></li>
+      <li class="services"><a href="#">startup agency demo</a></li>
+      </ul></li>
+    <li class="navigate"><a href="about.html" class="red home-padding res-nav">About</a>
+        </li>
+    <li class="navigate relative "><a href="our services.html"class="red home-padding" >Pages</a>
+      <ul class="home-list black">
+        <li class="services"><a href="our services.html">our services</a></li>
+        <li class="services"><a href="#">service details</a></li>
+        <li class="services"><a href="#">our portfolio</a></li>
+        <li class="services"><a href="#">portfolio details</a></li>
+        <li class="services"><a href="#">privacy policy</a></li>
+        <li class="services"><a href="#">coming soon</a></li>
+        <li class="services"><a href="#">404 page</a></li>
+        </ul>
+        </li>
+    <li class="navigate relative"><a href="button.html" class="red home-padding res-nav">Elements</a> 
+      <ul class="home-list black">
+      <li class="services"><a href="button.html">buttons</a></li>
+      <li class="services"><a href="#">list style</a></li>
+      <li class="services"><a href="#">tab & accordion</a></li>
+      <li class="services"><a href="#">prgressbar</a></li>
+      <li class="services"><a href="#">columns</a></li>
+      <li class="services"><a href="#">services box</a></li>
+      <li class="services"><a href="#">brand</a></li>
+      <li class="services"><a href="#">team members</a></li>
+      <li class="services"><a href="#">video popup</a></li>
+      <li class="services"><a href="#">gallery</a></li>
+      <li class="services"><a href="#">banner particles</a></li>
+      <li class="services"><a href="#">testimonial</a></li>
+      <li class="services"><a href="#">our pricing</a></li>
+      <li class="services"><a href="#">portfolio style</a></li>
+      </ul>
+      </li>
+    <li class="navigate relative"><a href="#"class="red home-padding res-nav">Shop</a>
+      <ul class="home-list black">
+        <li class="services"><a href="#">shop</a></li>
+        <li class="services open-box list-between"><a href="#">single product</a>
+       <ul class="single-product">
+        <li class="services list-between"><a href="#">Simple product</a></li>
+        <li class="services list-between"><a href="#">Grouped product</a></li>
+        <li class="services list-between"><a href="#">Affiliate product</a></li>
+        <li class="services list-between"><a href="#">Downloadable</a></li>
+        <li class="services list-between"><a href="#">Variable product</a></li>
+      </ul>
+      </li>
+        <li class="services"><a href="#">my account</a></li>
+        <li class="services"><a href="#">checkout</a></li>
+        <li class="services"><a href="#">cart</a></li>
+      </ul>
+      </li>
+    <li class="navigate relative"><a href="#"class="red home-padding res-nav">Blog</a>
+      <ul class="home-list black">
+        <li class="services"><a href="#">default</a></li>
+        <li class="services"><a href="#">blog list</a></li>
+        <li class="services"><a href="#">standard post</a></li>
+        <li class="services"><a href="#">gallery post</a></li>
+        <li class="services"><a href="#">video post</a></li>
+        <li class="services"><a href="#">audio post</a></li>
+        <li class="services"><a href="#">blockquote post</a></li>
+        <li class="services"><a href="#">link post</a></li>
+      </ul>
+      </li>
+    <li class="navigate"><a href="contact.html"class="red home-padding res-nav">Contact</a></li>
   </div>
   <div id="bodyOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.2);" onclick="closeNav()"></div>
   <span class="three-dots material-symbols-rounded"style="font-size:30px;cursor:pointer;color:white;" onclick="openNav()">&#xe5d2;</span>
@@ -352,7 +440,7 @@
    <div class="service  ">
       <div class="section-6 ">
   <p class="white highly website">Phenomenal Customer Service! I'm just starting out with the team helped me so much with integrating this into my website.<span class="under">Highly recommend.</span></p>
-  <span class=" uppercase white L-spacing wrd-spacing"><b class="asr fatima-white">fatima asrafy</b><span class="word col">-coo,amerimar enterprises,inc.</span></span>
+  <span class=" uppercase white L-spacing wrd-spacing"><b class="asr">fatima asrafy</b><span class="word col">-coo,amerimar enterprises,inc.</span></span>
    </div>
   <ul class=" space container">
   <li class="mix-pic"><img src="images/testimonial-1.jpg"class="wid"></li>
@@ -367,7 +455,7 @@
  </div>
  </div>
  <div class="section-7">
- <div class="wrapper three-image-wrapper">
+<div class="wrapper three-image-wrapper">
  <div class="latest">
   <h2 class="white alpha news ">latest news</h2>
  <p>There are many variations of passages of Lorem Ipsum available,
@@ -482,7 +570,7 @@ function closeNav() {
  <!-- start swiper slider script of beautiful things -->
   <script>
   var swiper = new Swiper(".mySwiper", {
-    slidesPerView: "auto", // Desktop view ke liye slidesPerView ko auto rakho
+    slidesPerView: "auto", 
     spaceBetween: 0,
     centeredSlides: true,
      autoplay: {
