--- a/about.html
+++ b/about.html
@@ -1,25 +1,28 @@
 <html>
 <head>
 <title>about</title>
+<!-- <!- start connect css link --> 
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/responsive1.css">
+<!-- end connect css link -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body class="about-main">
- 
- <header class="header-wid ">
+ <header class="header-wid">
   <div class="first-back width">
      <div class="wrap">
  <div class="header-wid ">
- <div class="header-lft">                               
-         <a href="#"><img src="images/logo.png" class="logo"></a>
+ <div class="header-left">                               
+         <a href="about.html"><img src="images/logo.png" class="logo"></a>
 </div>
 <div class="header-right">
         <ul class="header-navigate nav">
-		   <li class="about-navigate relative "><a href="index.html" class="red white">home</a>
+		   <li class="navigate relative "><a href="index.html" class="red home-padding">home</a>
 		 <ul class="home-list black">
-	   <li class="services"><a href="#">main demo</a></li>
+	   <li class="services"><a href="index.html">main demo</a></li>
 	   <li class="services"><a href="index.html">main demo dark</a></li>
 	   <li class="services"><a href="#">creative agency</a></li>
 	   <li class="services"><a href="#">creative agency landing</a></li>
@@ -38,9 +41,9 @@
 	   <li class="services"><a href="#">startup agency demo</a></li>
 	   </ul>
 		    </li>
-		   <li class="about-navigate"><a href="about.html"class="red white activate">about</a></li>
-		   <li class="about-navigate relative "><a href="our services.html"class="red white ">pages</a>
-		   <ul class="page black ">
+		   <li class="navigate"><a href="about.html"class="home-navigate">about</a></li>
+		   <li class="navigate relative "><a href="our services.html"class="red home-padding">pages</a>
+		   <ul class="page black">
 		   <li class="services"><a href="our services.html">our services</a></li>
 		   <li class="services"><a href="#">service details</a></li>
 		   <li class="services"><a href="#">our portfolio</a></li>
@@ -50,7 +53,7 @@
 		   <li class="services"><a href="#">404 page</a></li>
 		   </ul>
 		    </li>
-		    <li class="about-navigate"><a href="button.html"class="red white">elements</a><ul class="home-list black">
+		    <li class="navigate"><a href="button.html"class="red home-padding">elements</a><ul class="home-list black">
 			  <li class="services"><a href="button.html">buttons</a></li>
 			  <li class="services"><a href="#">list style</a></li>
 			  <li class="services"><a href="#">tab & accordion</a></li>
@@ -66,28 +69,144 @@
 			  <li class="services"><a href="#">our pricing</a></li>
 			  <li class="services"><a href="#">portfolio style</a></li>
 			  </ul></li>
-		   <li class="about-navigate"><a href="#"class="red white">shop</a></li>
-		   <li class="about-navigate"><a href="#"class="red white">blog</a></li>
-		   <li class="about-navigate"><a href="contact.html"class="red white">contact</a></li>
+        <li class="navigate relative"><a href="#"class="red home-padding">shop</a>
+          <ul class="home-list black">
+           <li class="services"><a href="#">shop</a></li>
+           <li class="services open-box list-between"><a href="#">single product</a>
+          <ul class="single-product">
+           <li class="services list-between"><a href="#">Simple product</a></li>
+           <li class="services list-between"><a href="#">Grouped product</a></li>
+           <li class="services list-between"><a href="#">Affiliate product</a></li>
+           <li class="services list-between"><a href="#">Downloadable</a></li>
+           <li class="services list-between"><a href="#">Variable product</a></li>
+         </ul>
+         </li>
+           <li class="services"><a href="#">my account</a></li>
+           <li class="services"><a href="#">checkout</a></li>
+           <li class="services"><a href="#">cart</a></li>
+         </ul>
+         </li>
+         <li class="navigate relative"><a href="#"class="red home-padding">blog</a>
+          <ul class="home-list black">
+            <li class="services"><a href="#">default</a></li>
+            <li class="services"><a href="#">blog list</a></li>
+            <li class="services"><a href="#">standard post</a></li>
+            <li class="services"><a href="#">gallery post</a></li>
+            <li class="services"><a href="#">video post</a></li>
+            <li class="services"><a href="#">audio post</a></li>
+            <li class="services"><a href="#">blockquote post</a></li>
+            <li class="services"><a href="#">link post</a></li>
+          </ul>	   
+          </li>
+		   <li class="navigate"><a href="contact.html"class="red home-padding">contact</a></li>
 		   </ul>
        <a href="#"class="shopp-icon"><i class="fa fa-shopping-cart" aria-hidden="true"><span class="script">0</span></i></a>
-			 <a href="#"class="header-btn about-header-btn">let's talk</a>
+			 <a href="#"class="header-button">let's talk</a>
  </div>
  </div>
  <div class="width center">
  <h1 class="alpha bread-crumb">about</h1>
  <ul>
- <li class=" inline"><a href="home page .html" class="house white">Home</a></li>
+ <li class=" inline"><a href="home page .html" class="house home-padding">Home</a></li>
  <li class=" inline dot"></li>
  <li class="rd-clr inline">About</li>
  </ul>
 </div>
 </div>
 </div>
+      
+<!-- start responsive navigation javascript code -->
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <li class="navigate relative"><a href="index.html" class="sidebar home-navigate home-padding">Home</a>
+    <ul class="home-list black">
+      <li class="services "><a href="index.html">main demo</a></li>
+    <li class="services"><a href="index.html" class="demo-color">main demo dark</a></li>
+    <li class="services"><a href="#">creative agency</a></li>
+    <li class="services"><a href="#">creative agency landing</a></li>
+    <li class="services"><a href="#">personal portfolio</a></li>
+    <li class="services"><a href="#">personal portfolio 02</a></li>
+    <li class="services"><a href="#">personal portfolio landing</a></li>
+    <li class="services"><a href="#">designer portfolio</a></li>
+    <li class="services"><a href="#">creative portfolio</a></li>
+    <li class="services"><a href="#">business</a><li>
+    <li class="services"><a href="#">digital agency</a></li>
+    <li class="services"><a href="#">minimal portfolio</a></li>
+    <li class="services"><a href="#">studio agency</a></li>
+    <li class="services"><a href="#">home particles</a></li>
+    <li class="services"><a href="#">corporate business</a></li>
+    <li class="services"><a href="#">parallax home</a></li>
+    <li class="services"><a href="#">startup agency demo</a></li>
+    </ul></li>
+  <li class="navigate"><a href="about.html" class="red home-padding res-nav">About</a>
+      </li>
+  <li class="navigate relative "><a href="our services.html"class="red home-padding" >Pages</a>
+    <ul class="home-list black">
+      <li class="services"><a href="our services.html">our services</a></li>
+      <li class="services"><a href="#">service details</a></li>
+      <li class="services"><a href="#">our portfolio</a></li>
+      <li class="services"><a href="#">portfolio details</a></li>
+      <li class="services"><a href="#">privacy policy</a></li>
+      <li class="services"><a href="#">coming soon</a></li>
+      <li class="services"><a href="#">404 page</a></li>
+      </ul>
+      </li>
+  <li class="navigate relative"><a href="button.html" class="red home-padding res-nav">Elements</a> 
+    <ul class="home-list black">
+    <li class="services"><a href="button.html">buttons</a></li>
+    <li class="services"><a href="#">list style</a></li>
+    <li class="services"><a href="#">tab & accordion</a></li>
+    <li class="services"><a href="#">prgressbar</a></li>
+    <li class="services"><a href="#">columns</a></li>
+    <li class="services"><a href="#">services box</a></li>
+    <li class="services"><a href="#">brand</a></li>
+    <li class="services"><a href="#">team members</a></li>
+    <li class="services"><a href="#">video popup</a></li>
+    <li class="services"><a href="#">gallery</a></li>
+    <li class="services"><a href="#">banner particles</a></li>
+    <li class="services"><a href="#">testimonial</a></li>
+    <li class="services"><a href="#">our pricing</a></li>
+    <li class="services"><a href="#">portfolio style</a></li>
+    </ul>
+    </li>
+  <li class="navigate relative"><a href="#"class="red home-padding res-nav">Shop</a>
+    <ul class="home-list black">
+      <li class="services"><a href="#">shop</a></li>
+      <li class="services open-box list-between"><a href="#">single product</a>
+     <ul class="single-product">
+      <li class="services list-between"><a href="#">Simple product</a></li>
+      <li class="services list-between"><a href="#">Grouped product</a></li>
+      <li class="services list-between"><a href="#">Affiliate product</a></li>
+      <li class="services list-between"><a href="#">Downloadable</a></li>
+      <li class="services list-between"><a href="#">Variable product</a></li>
+    </ul>
+    </li>
+      <li class="services"><a href="#">my account</a></li>
+      <li class="services"><a href="#">checkout</a></li>
+      <li class="services"><a href="#">cart</a></li>
+    </ul>
+    </li>
+  <li class="navigate relative"><a href="#"class="red home-padding res-nav">Blog</a>
+    <ul class="home-list black">
+      <li class="services"><a href="#">default</a></li>
+      <li class="services"><a href="#">blog list</a></li>
+      <li class="services"><a href="#">standard post</a></li>
+      <li class="services"><a href="#">gallery post</a></li>
+      <li class="services"><a href="#">video post</a></li>
+      <li class="services"><a href="#">audio post</a></li>
+      <li class="services"><a href="#">blockquote post</a></li>
+      <li class="services"><a href="#">link post</a></li>
+    </ul>
+    </li>
+  <li class="navigate"><a href="contact.html"class="red home-padding res-nav">Contact</a></li>
+</div>
+<div id="bodyOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.2);" onclick="closeNav()"></div>
+<span class="three-dots material-symbols-rounded"style="font-size:30px;cursor:pointer;color:white;" onclick="openNav()">&#xe5d2;</span>
+<!-- End responsive navigation Javascript code -->
 </header>
 
 <div class="about-us-wrap">
-<section class="width flex main-about">
+<section class="width flex res-wrap main-about">
 <div class="queen">
     <img src="images/girl.jpg" class="border-img">
 </div>
@@ -136,75 +255,94 @@
 </div>
 </section>
 <section class="width statcImg">  
-hello
+
 </section>
 <section class="width">
 <div class="wrap">
 <div class="width">
-<h2 class="alpha news blank">Skilled Team</h2>
+<h2 class="alpha res-news news blank">Skilled Team</h2>
 <p class="blank team-paira">There are many variations of passages of Lorem Ipsum available,<br>but the majority have suffered alteration.</p>
 </div>
-<div class="width display">
-<div class="three-images">
-<div class="one-pic">
-<div class="linear">
-</div>
-<div class="white relative">
-<div class=" position">
-<h3>Jone Due</h3>
-</div>
-<div class="web">
-<span>Sr.Web Developer</span>
-</div>
-</div>
-<div class="width top-abs">
-  <a href="#"><i class="fa fa-facebook-official  twitter white" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-linkedin-square  white twitter" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-twitter white " aria-hidden="true"></i></a>
-</div>
-</div>
-</div>
-<div class="three-images ">
-<div class="two-pic">
-<div class="linear">
-</div>
-<div class="white relative">
-<div class=" position">
-<h3>Dione Benjamin</h3>
-</div>
-<div class="web">
-<span>Business Analyst</span>
-</div>
-</div>
-<div class="width top-abs">
-  <a href="#"><i class="fa fa-facebook-official  white twitter" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-linkedin-square  white twitter" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-twitter white " aria-hidden="true"></i></a>
-</div>
-</div>
-</div>
-<div class="three-images">
-<div class="three-pic">
-<div class="linear">
-</div>
-<div class="white relative">
-<div class=" position">
-<h3>Miyah Bryan</h3>
-</div>
-<div class="web">
-<span>Business Consultant</span>
-</div>
-</div>
-<div class="width top-abs">
-  <a href="#"><i class="fa fa-facebook-official twitter white" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-linkedin-square twitter white" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-twitter white " aria-hidden="true"></i></a>
-</div>
-</div>
-</div>
-</div>
-<div class="width display">
-<div class="three-images ">
+
+
+<div class="width display wrap-wrap">
+  <div class="three-images res-images">
+  <div class="one-pic">
+  <div class="linear ">
+  </div>
+  <div class="white pic-r">
+    <div class=" position">
+      <h3>Jone Due</h3>
+      </div>
+      <div class="web">
+      <span>Sr.Web Developer</span>
+      </div>
+  </div>
+  <div class="width top-abs">
+    <a href="#"><i class="fa fa-facebook-official  twitter white" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-linkedin-square  white twitter" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-twitter white " aria-hidden="true"></i></a>
+  </div>
+  </div>
+  </div>
+  <div class="three-images res-images">
+  <div class="two-pic">
+  <div class="linear">
+  </div>
+  <div class="white">
+    <div class=" position">
+      <h3>Dione Benjamin</h3>
+      </div>
+      <div class="web">
+      <span>Business Analyst</span>
+      </div>
+  </div>
+  <div class="width top-abs">
+    <a href="#"><i class="fa fa-facebook-official  white twitter" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-linkedin-square  white twitter" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-twitter white " aria-hidden="true"></i></a>
+  </div>
+  </div>
+  </div>
+  <div class="three-images res-images">
+  <div class="three-pic">
+  <div class="linear">
+  </div>
+  <div class="white">
+    <div class=" position">
+      <h3>Miyah Bryan</h3>
+      </div>
+      <div class="web">
+      <span>Business Consultant</span>
+      </div>
+  </div>
+  <div class="width top-abs">
+    <a href="#"><i class="fa fa-facebook-official twitter white" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-linkedin-square twitter white" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-twitter white " aria-hidden="true"></i></a>
+  </div>
+  </div>
+  </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="width display wrap-wrap">
+<div class="three-images res-images">
 <div class="fourth-pic">
 <div class="linear">
 </div>
@@ -223,7 +361,7 @@ hello
 </div>
 </div>
 </div>
-<div class="three-images ">
+<div class="three-images res-images">
 <div class="fifth-pic">
 <div class="linear">
 </div>
@@ -242,7 +380,7 @@ hello
 </div>
 </div>
 </div>
-<div class="three-images ">
+<div class="three-images res-images">
 <div class="sixth-pic">
 <div class="linear">
 </div>
@@ -264,11 +402,11 @@ hello
 </div>
 </div>
 </section>
+ <div class="wrap">
    <div class="service  bg-service">
-	    <div class="wrap">
       <div class="section-6 ">
-  <p class="highly website">Phenomenal Customer Service! I'm just starting out with the team helped me so much with integrating this into my website.<span class="under">Highly recommend.</span></p>
-  <span class=" uppercase  L-spacing wrd-spacing"><b class="asr">fatima asrafy</b><span class="word col">-coo,amerimar enterprises,inc.</span></span>
+  <p class="highly res-highly website">Phenomenal Customer Service! I'm just starting out with the team helped me so much with integrating this into my website.<span class="under">Highly recommend.</span></p>
+  <span class=" uppercase  L-spacing wrd-spacing"><b class="asr res-asr">fatima asrafy</b><span class="word res-word col">-coo,amerimar enterprises,inc.</span></span>
    </div>
   <ul class=" space container">
   <li class="mix-pic"><img src="images/testimonial-1.jpg"class="wid"></li>
@@ -342,4 +480,19 @@ hello
 </div>
 </div>
 </section>
+<!-- start javscript code of responsive navigation icon -->
+<script>
+  function openNav() {
+     var navWidth = window.innerWidth < 400 ? "189px" : "442px";
+     document.getElementById("mySidenav").style.width = navWidth;
+    document.getElementById("bodyOverlay").style.display = "block";
+    document.body.style.backgroundColor = "black,0.1";
+  }
+  function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("bodyOverlay").style.display = "none";
+    document.body.style.backgroundColor = "black";
+  }
+    </script>
+    <!-- end javscript code of responsive navigation icon -->
 </body>
