--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body class="about-main">
- <header class="header-wid">
+ <header class="width-wid">
   <div class="first-back width">
      <div class="wrap">
  <div class="header-wid ">
@@ -103,18 +103,7 @@
        <a href="#"class="shopp-icon"><i class="fa fa-shopping-cart" aria-hidden="true"><span class="script">0</span></i></a>
 			 <a href="#"class="header-button">let's talk</a>
  </div>
- </div>
- <div class="width center">
- <h1 class="alpha bread-crumb">about</h1>
- <ul>
- <li class=" inline"><a href="home page .html" class="house home-padding">Home</a></li>
- <li class=" inline dot"></li>
- <li class="rd-clr inline">About</li>
- </ul>
-</div>
-</div>
-</div>
-      
+	       
 <!-- start responsive navigation javascript code -->
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -203,8 +192,18 @@
 <div id="bodyOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.2);" onclick="closeNav()"></div>
 <span class="three-dots material-symbols-rounded"style="font-size:30px;cursor:pointer;color:white;" onclick="openNav()">&#xe5d2;</span>
 <!-- End responsive navigation Javascript code -->
+ </div>
+ <div class="width center">
+ <h1 class="alpha bread-crumb">about</h1>
+ <ul>
+ <li class=" inline"><a href="home page .html" class="house home-padding">Home</a></li>
+ <li class=" inline dot"></li>
+ <li class="rd-clr inline">About</li>
+ </ul>
+</div>
+</div>
+</div>
 </header>
-
 <div class="about-us-wrap">
 <section class="width flex res-wrap main-about">
 <div class="queen">
