--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body class="about-main">
- <header class="width-wid">
+ <header class="header-wid">
   <div class="first-back width">
      <div class="wrap">
  <div class="header-wid ">
@@ -190,7 +190,7 @@
   <li class="navigate"><a href="contact.html"class="red home-padding res-nav">Contact</a></li>
 </div>
 <div id="bodyOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.2);" onclick="closeNav()"></div>
-<span class="three-dots material-symbols-rounded"style="font-size:30px;cursor:pointer;color:white;" onclick="openNav()">&#xe5d2;</span>
+<span class="three-dots res-dots material-symbols-rounded"style="font-size:30px;cursor:pointer;color:white;" onclick="openNav()">&#xe5d2;</span>
 <!-- End responsive navigation Javascript code -->
  </div>
  <div class="width center">
