--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
   <li class="navigate"><a href="contact.html"class="red home-padding res-nav">Contact</a></li>
 </div>
 <div id="bodyOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.2);" onclick="closeNav()"></div>
-  <span class="three-dots material-symbols-rounded"style="font-size:30px;cursor:pointer;color:white;" onclick="openNav()">&#xe5d2;</span>
+  <span class="three-dots res-dot material-symbols-rounded"style="font-size:30px;cursor:pointer;color:white;" onclick="openNav()">&#xe5d2;</span>
 <!-- End responsive navigation Javascript code -->
  </div>
  <div class="width center">
